# PointCloudTools

./: .gitignore  Readme.md
Angle/: Readme.md
Angle/Estimate_Normals/: CMakeLists.txt  estimate_normals.cpp  ground_0.pcd  test.py
Angle/Ground_Segmentation/: CMakeLists.txt  ground_segmentation.cpp
Ground_Segmentation/: CMakeLists.txt  Readme.md  ground_segmentation.cpp
Ground_Segmentation/data/: 20201028_162415_018150.pcd
Tiny_3DBox_Points/: CMakeLists.txt  Readme.md  tinyboxstatistic.cpp
Tiny_3DBox_Points/data/: i2.pcd
